gccida/c1/init_propagate_block_info
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/init_propagate_block_info/src/flow.c:2270:4: error: expected ';' after expression
rtx v18; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/init_propagate_block_info/src/flow.c:2270:5: error: use of undeclared identifier 'v18'
rtx v18; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/init_propagate_block_info/src/flow.c:2285:28: error: expected expression
v10->reg_next_use = ( rtx *)xcalloc( v11, 8uLL); 
                           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/init_propagate_block_info/src/flow.c:2302:45: error: expected ')'
for ( i = bb->end; i != bb->head; i = ( rtx)i[1] ) 
                                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/init_propagate_block_info/src/flow.c:2302:5: note: to match this '('
for ( i = bb->end; i != bb->head; i = ( rtx)i[1] ) 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/init_propagate_block_info/src/flow.c:2308:13: error: expected ';' after expression
v16 = ( rtx)i[2]; 
            ^
            ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/init_propagate_block_info/src/flow.c:2310:32: error: expected expression
v16 = single_set_2( i, *( rtx *)&i[2]); 
                               ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/init_propagate_block_info/src/flow.c:2321:1: error: use of undeclared identifier 'v18'
v18 = canon_rtx( rtx); 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/init_propagate_block_info/src/flow.c:2322:21: error: use of undeclared identifier 'v18'
if ( ( *( ( _BYTE *)v18 + 3) & 4) == 0 ) 
                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/init_propagate_block_info/src/flow.c:2324:24: error: use of undeclared identifier 'v18'
v19.rtwint = ( __int64)v18->fld[0]; 
                       ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/init_propagate_block_info/src/flow.c:2327:12: error: expected expression
&& *( rtx *)( v19.rtwint + 8) == global_rtl[3] 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/init_propagate_block_info/src/flow.c:2330:27: error: use of undeclared identifier 'v18'
add_to_mem_set_list( v10, v18); 
                          ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/init_propagate_block_info/src/obj/flow.o] Error 1
